Update fixtures